--- a/templates/web/partials/whychoose.html
+++ b/templates/web/partials/whychoose.html
@@ -1,70 +1,66 @@
 {% load static %}
 <!-- Counter Start -->
-<section class="main-bg " style="background: url({% static 'web/images/others/06.jpg' %}) no-repeat 0 0; background-attachment: fixed; background-size:cover; ">
+<section class="main-bg "
+    style="background: url({% static 'web/images/others/06.jpg' %}) no-repeat 0 0; background-attachment: fixed; background-size:cover; ">
     <div class="container">
         <div class="row">
             <div class="col-lg-6 mb-lg-0 mb-5">
-                <div class="iq-title-box iq-title-default iq-title-box-2">           
-                                 <span class="iq-subtitle">Why choose DCNS?</span>
+                <div class="iq-title-box iq-title-default iq-title-box-2">
+                    <span class="iq-subtitle">Why choose DCNS?</span>
                     <h2 class="iq-title text-white">The Choice for Innovation and Excellence</h2>
-                    <p class="iq-title-desc text-white">Take DCNS, where innovation meets commitment, to the forefront of your business. Customized solutions, proven success, and an unwavering customer focus make us your ideal partner for a safe and streamlined journey into the digital future. Choose DCNS and thrive with technical excellence.</p>
+                    <p class="iq-title-desc text-white">Take DCNS, where innovation meets commitment, to the forefront
+                        of your business. Customized solutions, proven success, and an unwavering customer focus make us
+                        your ideal partner for a safe and streamlined journey into the digital future. Choose DCNS and
+                        thrive with technical excellence.</p>
                 </div>
-                <div class="iq-list  iq-two-column">    
-<ul class="iq-list-with-icon">
-            <li class="text-white">
-            <i class="ion ion-checkmark-round"></i>
-            New features at Core          </li>
-        
-            <li class="text-white">
-            <i class="ion ion-checkmark-round"></i>
-            Solutions designed for your success          </li>
-        
-            <li class="text-white">
-            <i class="ion ion-checkmark-round"></i>
-            Dedicated to unparalleled service</li>
-        
-            <li class="text-white">
-            <i class="ion ion-checkmark-round"></i>
-            Full track record
-        </li>
-        
-            <li class="text-white">
-            <i class="ion ion-checkmark-round"></i>
-            Approach to User-Based Communications          </li>
-        
-            <li class="text-white">
-            <i class="ion ion-checkmark-round"></i>
-                Security and compliance guarantee
-       </li>
-       <li class="text-white">
-       <i class="ion ion-checkmark-round"></i>
-       Customer focus
-</li>
-<li class="text-white">
-<i class="ion ion-checkmark-round"></i>
-Ongoing learning and change
-</li>
+                <div class="iq-list  iq-two-column">
+                    <ul class="iq-list-with-icon">
+                        <li class="text-white">
+                            <i class="ion ion-checkmark-round"></i>
+                            New features at Core
+                        </li>
 
-        
-    </ul>
-</div>
-               
+                        <li class="text-white">
+                            <i class="ion ion-checkmark-round"></i>
+                            Solutions designed for your success
+                        </li>
+
+                        <li class="text-white">
+                            <i class="ion ion-checkmark-round"></i>
+                            Dedicated to unparalleled service
+                        </li>
+
+                        <li class="text-white">
+                            <i class="ion ion-checkmark-round"></i>
+                            Full track record
+                        </li>
+
+                        <li class="text-white">
+                            <i class="ion ion-checkmark-round"></i>
+                            Approach to User-Based Communications
+                        </li>
+
+                        <li class="text-white">
+                            <i class="ion ion-checkmark-round"></i>
+                            Security and compliance guarantee
+                        </li>
+                        <li class="text-white">
+                            <i class="ion ion-checkmark-round"></i>
+                            Customer focus
+                        </li>
+                        <li class="text-white">
+                            <i class="ion ion-checkmark-round"></i>
+                            Ongoing learning and change
+                        </li>
+
+
+                    </ul>
+                </div>
+
             </div>
             <div class="col-lg-6 align-self-stretch align-self-center">
                 <div class="iq-popup-video">
-{% comment %} <div class="iq-video-img position-relative">
-                   
-        <div class="iq-video-icon wow FadeIn" >
-            <a href="https://www.youtube.com/watch?v=XHOmBV4js_E" class="iq-video popup-youtube">
-                <i aria-hidden="true" class="ion ion-play"></i>             </a>
-            <div class="iq-waves">
-                <div class="waves wave-1"></div>
-                <div class="waves wave-2"></div>
-                <div class="waves wave-3"></div>
-            </div>
-        </div>
-</div> {% endcomment %}
-</div>
+                </div>
             </div>
         </div>
     </div>
