--- a/templates/web/contact.html
+++ b/templates/web/contact.html
@@ -1,191 +1,161 @@
-{% extends 'web/partials/base.html' %} 
-{% load static %} 
+{% extends 'web/partials/base.html' %}
+{% load static %}
 {% block content %}
 {% include "web/partials/header2.html" %}
-    <!-- Main-Content Start -->
-    <div class="main-content">
-        <!-- Breadcrumb Start -->
-        <div class=" main-bg">
-            <div class="container-fluid p-0">
-                <div class="text-left iq-breadcrumb-one
+<!-- Main-Content Start -->
+<div class="main-content">
+    <!-- Breadcrumb Start -->
+    <div class=" main-bg">
+        <div class="container-fluid p-0">
+            <div class="text-left iq-breadcrumb-one
                   iq-bg-over black     ">
-                    <div class="container">
-                        <div class="row align-items-center">
-                            <div class="col-sm-12">
-                                <nav aria-label="breadcrumb" class="text-center iq-breadcrumb-two">
-                                    <h2 class="title">
-                              Contact Us                     </h2>
-                                    <ol class="breadcrumb main-bg">
-                                        <li class="breadcrumb-item"><a href="{% url 'web:index' %}"><i class="fa fa-home mr-2"></i>Home</a></li>
-                                        <li class="breadcrumb-item active">Contact Us </li>
-                                    </ol>
-                                </nav>
-                            </div>
+                <div class="container">
+                    <div class="row align-items-center">
+                        <div class="col-sm-12">
+                            <nav aria-label="breadcrumb" class="text-center iq-breadcrumb-two">
+                                <h2 class="title">
+                                    Contact Us </h2>
+                                <ol class="breadcrumb main-bg">
+                                    <li class="breadcrumb-item"><a href="{% url 'web:index' %}"><i
+                                                class="fa fa-home mr-2"></i>Home</a></li>
+                                    <li class="breadcrumb-item active">Contact Us </li>
+                                </ol>
+                            </nav>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-        <!-- Breadcrumb End -->
-        <!-- Contact Start -->
-        <div class=" overview-block-ptb">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-6 col-md-12">
-                        <img src="{% static 'web/images/others/01.png' %}" class="img-fluid" alt="contact" />
-                    </div>
-                    <div class="col-lg-6 col-md-12">
-                        <div class=" text-left iq-title-box iq-title-default iq-title-box-2">
-                            <div class="iq-title-icon">
-                            </div>
-                            <span class="iq-subtitle">Get In Touch</span>
-                            <h2 class="iq-title">
-                        Contact With US   </h2>
+    </div>
+    <!-- Breadcrumb End -->
+    <!-- Contact Start -->
+    <div class=" overview-block-ptb">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-6 col-md-12">
+                    <img src="{% static 'web/images/others/01.png' %}" class="img-fluid" alt="contact" />
+                </div>
+                <div class="col-lg-6 col-md-12">
+                    <div class=" text-left iq-title-box iq-title-default iq-title-box-2">
+                        <div class="iq-title-icon">
+                        </div>
+                        <span class="iq-subtitle">Get In Touch</span>
+                        <h2 class="iq-title">
+                            Contact With US </h2>
 
-                            <p class="iq-title-desc">It is a long established fact that a reader will be distracted</p>
-                        </div>
-                        <div role="form" class="wpcf7" id="wpcf7-f790-p785-o1" lang="en-US" dir="ltr">
-                            <div class="screen-reader-response"></div>
-                            <form class="row wpcf7-form ajax reload" method="post">
-                                {% csrf_token %}
-                                <div style="display: none;">
-                                    <input type="hidden" name="_wpcf7" value="790" />
-                                    <input type="hidden" name="_wpcf7_version" value="5.1.6" />
-                                    <input type="hidden" name="_wpcf7_locale" value="en_US" />
-                                    <input type="hidden" name="_wpcf7_unit_tag" value="wpcf7-f790-p785-o1" />
-                                    <input type="hidden" name="_wpcf7_container_post" value="785" />
+                        <p class="iq-title-desc">It is a long established fact that a reader will be distracted</p>
+                    </div>
+                    <div role="form" class="wpcf7" id="wpcf7-f790-p785-o1" lang="en-US" dir="ltr">
+                        <div class="screen-reader-response"></div>
+                        <form class="row wpcf7-form ajax reload" method="post">
+                            {% csrf_token %}
+                            <div style="display: none;">
+                                <input type="hidden" name="_wpcf7" value="790" />
+                                <input type="hidden" name="_wpcf7_version" value="5.1.6" />
+                                <input type="hidden" name="_wpcf7_locale" value="en_US" />
+                                <input type="hidden" name="_wpcf7_unit_tag" value="wpcf7-f790-p785-o1" />
+                                <input type="hidden" name="_wpcf7_container_post" value="785" />
+                            </div>
+                            <div class=row>
+                                <div class="col-lg-6">
+                                    <span class="wpcf7-form-control-wrap first-name">
+                                        <input type="text" name="first_name" id="first_name" value="" size="40"
+                                            class="wpcf7-form-control wpcf7-text wpcf7-validates-as-required"
+                                            aria-required="true" aria-invalid="false" placeholder="First Name"
+                                            required />
+                                    </span>
                                 </div>
-                                <div class=row>
-                                    <div class="col-lg-6">
-                                        <span class="wpcf7-form-control-wrap first-name">
-                                            <input type="text" 
-                                            name="first_name"
-                                            id="first_name" 
-                                            value="" size="40" 
-                                            class="wpcf7-form-control wpcf7-text wpcf7-validates-as-required" 
-                                            aria-required="true" aria-invalid="false" placeholder="First Name" required />
-                                        </span>
-                                    </div>
-                                    <div class="col-lg-6">
-                                        <span class="wpcf7-form-control-wrap last-name">
-                                            <input type="text" 
-                                            name="last_name"
-                                            id="last_name" 
-                                            value="" size="40" 
-                                            class="wpcf7-form-control wpcf7-text wpcf7-validates-as-required" 
-                                            aria-required="true" aria-invalid="false" placeholder="Last Name" required />
-                                        </span>
-                                    </div>
-                                    <div class="col-lg-6">
-                                        <span class="wpcf7-form-control-wrap your-email">
-                                            <input type="email"
-                                            name="email"
-                                            id="email" 
-                                            value="" size="40" 
+                                <div class="col-lg-6">
+                                    <span class="wpcf7-form-control-wrap last-name">
+                                        <input type="text" name="last_name" id="last_name" value="" size="40"
+                                            class="wpcf7-form-control wpcf7-text wpcf7-validates-as-required"
+                                            aria-required="true" aria-invalid="false" placeholder="Last Name"
+                                            required />
+                                    </span>
+                                </div>
+                                <div class="col-lg-6">
+                                    <span class="wpcf7-form-control-wrap your-email">
+                                        <input type="email" name="email" id="email" value="" size="40"
                                             class="wpcf7-form-control wpcf7-text wpcf7-email wpcf7-validates-as-required wpcf7-validates-as-email"
-                                            aria-required="true" aria-invalid="false" placeholder="Email Address" required />
-                                        </span>
-                                    </div>
-                                    <div class="col-lg-6">
-                                        <span class="wpcf7-form-control-wrap tel-554">
-                                            <input type="tel" 
-                                            name="phone" 
-                                            id="phone"
-                                            value=""
-                                            size="40" 
-                                            class="wpcf7-form-control wpcf7-text wpcf7-tel wpcf7-validates-as-tel" 
-                                            aria-invalid="false" placeholder="Phone" required/>
-                                        </span>
-                                    </div>
-                                    <div class="col-lg-12">
-                                        <p> 
-                                        <span class="wpcf7-form-control-wrap your-message">
-                                            <textarea 
-                                            name="message"
-                                            id="message" 
-                                            cols="40" rows="10" 
-                                            class="wpcf7-form-control wpcf7-textarea" 
-                                            aria-invalid="false" placeholder="Message" required></textarea>
-                                        </span>
-                                        </p>
-                                    </div>
-                                    <div class="col-lg-12">
-                                        <input type="submit" value="Send" class="wpcf7-form-control wpcf7-submit" />
-                                    </div>
+                                            aria-required="true" aria-invalid="false" placeholder="Email Address"
+                                            required />
+                                    </span>
                                 </div>
-                                <div class="wpcf7-response-output wpcf7-display-none"></div>
-                            </form>
-                        </div>
+                                <div class="col-lg-6">
+                                    <span class="wpcf7-form-control-wrap tel-554">
+                                        <input type="tel" name="phone" id="phone" value="" size="40"
+                                            class="wpcf7-form-control wpcf7-text wpcf7-tel wpcf7-validates-as-tel"
+                                            aria-invalid="false" placeholder="Phone" required />
+                                    </span>
+                                </div>
+                                <div class="col-lg-12">
+                                    <p>
+                                        <span class="wpcf7-form-control-wrap your-message">
+                                            <textarea name="message" id="message" cols="40" rows="10"
+                                                class="wpcf7-form-control wpcf7-textarea" aria-invalid="false"
+                                                placeholder="Message" required></textarea>
+                                        </span>
+                                    </p>
+                                </div>
+                                <div class="col-lg-12">
+                                    <input type="submit" value="Send" class="wpcf7-form-control wpcf7-submit" />
+                                </div>
+                            </div>
+                            <div class="wpcf7-response-output wpcf7-display-none"></div>
+                        </form>
                     </div>
                 </div>
             </div>
-
         </div>
 
     </div>
-    <!-- Contact End -->
 
-    <section class="light-gray-bg">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-4  col-md-6">
-                    <div class="iq-process iq-process-step-style-2 text-center">
+</div>
+<!-- Contact End -->
 
-                        <div class="iq-process-step">
-
-                            <div class="iq-step-content">
-                                <i aria-hidden="true" class="ion ion-ios-location"></i> </div>
-                            <div class="iq-step-text-area">
-
-                                <h4 class="iq-step-title">Location</h4>
-
-                                <span class="iq-step-desc">Abu Dhabi, UAE</span>
-
-                            </div>
-
+<section class="light-gray-bg">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-4  col-md-6">
+                <div class="iq-process iq-process-step-style-2 text-center">
+                    <div class="iq-process-step">
+                        <div class="iq-step-content">
+                            <i aria-hidden="true" class="ion ion-ios-location"></i>
                         </div>
-
+                        <div class="iq-step-text-area">
+                            <h4 class="iq-step-title">Location</h4>
+                            <span class="iq-step-desc">Abu Dhabi, UAE</span>
+                        </div>
                     </div>
                 </div>
-                <div class="col-lg-4  col-md-6">
-                    <div class="iq-process iq-process-step-style-2 text-center">
-
-                        <div class="iq-process-step">
-
-                            <div class="iq-step-content">
-                                <i aria-hidden="true" class="ion ion-ios-email"></i> </div>
-                            <div class="iq-step-text-area">
-
-                                <h4 class="iq-step-title">Email</h4>
-
-                                <span class="iq-step-desc">info@dcns.ae </span>
-
-                            </div>
-
+            </div>
+            <div class="col-lg-4  col-md-6">
+                <div class="iq-process iq-process-step-style-2 text-center">
+                    <div class="iq-process-step">
+                        <div class="iq-step-content">
+                            <i aria-hidden="true" class="ion ion-ios-email"></i>
                         </div>
-
+                        <div class="iq-step-text-area">
+                            <h4 class="iq-step-title">Email</h4>
+                            <span class="iq-step-desc">info@dcns.ae </span>
+                        </div>
                     </div>
                 </div>
-                <div class="col-lg-4  col-md-6">
-                    <div class="iq-process iq-process-step-style-2 text-center">
-
-                        <div class="iq-process-step">
-
-                            <div class="iq-step-content">
-                                <i aria-hidden="true" class="ion ion-ios-telephone"></i> </div>
-                            <div class="iq-step-text-area">
-
-                                <h4 class="iq-step-title">Phone</h4>
-
-                                <span class="iq-step-desc">050 742 4152</span>
-
-                            </div>
-
+            </div>
+            <div class="col-lg-4  col-md-6">
+                <div class="iq-process iq-process-step-style-2 text-center">
+                    <div class="iq-process-step">
+                        <div class="iq-step-content">
+                            <i aria-hidden="true" class="ion ion-ios-telephone"></i>
                         </div>
-
+                        <div class="iq-step-text-area">
+                            <h4 class="iq-step-title">Phone</h4>
+                            <span class="iq-step-desc">050 742 4152</span>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-    </section>
+    </div>
+</section>
 {% endblock %}
