--- a/templates/web/partials/header2.html
+++ b/templates/web/partials/header2.html
@@ -1,60 +1,60 @@
-   {% load static %}
-   <!-- Header -->
-    <header id="main-header" class="header-main">
-        <div class="container">
-            <div class="row">
-                <div class="col-sm-12">
-                    <nav class="navbar navbar-expand-lg navbar-light">
-                        <a class="navbar-brand" href="{% url "web:index" %}">
-                            <img class="img-fluid" src="{% static 'web/images/logo.svg' %}" alt="img">
-                        </a>
-                        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                            <span class="menu-btn d-inline-block" id="menu-btn">
-                        <span class="line"></span>
+{% load static %}
+<!-- Header -->
+<header id="main-header" class="header-main">
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-12">
+                <nav class="navbar navbar-expand-lg navbar-light">
+                    <a class="navbar-brand" href="{% url "web:index" %}">
+                        <img class="img-fluid" src="{% static 'web/images/logo.svg' %}" alt="img">
+                    </a>
+                    <button class="navbar-toggler" type="button" data-toggle="collapse"
+                        data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                        aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="menu-btn d-inline-block" id="menu-btn">
                             <span class="line"></span>
                             <span class="line"></span>
-                            </span>
-                            <span class="ion-navicon"></span>
-                        </button>
-                        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                            <ul class="navbar-nav mr-auto w-100 justify-content-end">
-                                <li class="nav-item dropdown">
-                                    <a class="nav-link active " href="{% url 'web:index' %}" >
-                                      Home
-                                    </a>
-                                </li>
-                                <li class="nav-item dropdown">
-                                    <a class="nav-link  " href="{% url 'web:about' %}" >
-                                      About Us
-                                    </a>
-                                </li>
-                                <li class="nav-item dropdown">
-                                    <a class="nav-link  " href="{% url 'web:service' %}" >
-                                      Service
-                                    </a>
-                                </li>
-                                <li class="nav-item dropdown">
-                                    <a class="nav-link  " href="{% url 'web:updates' %}" >
-                                      Updates
-                                    </a>
-                                </li>
-                                <li class="nav-item dropdown">
-                                    <a class="nav-link  " href="{% url 'web:contact' %}" >
-                                      Contact
-                                    </a>
-                                </li>
-                                
-                            </ul>
-                        </div>
-                        <div class="sub-main">
-                            <ul>
-                                <li class="d-inline"><a href="javascript:void(0)" class="login iq-button iq-btn-outline iq-btn-round" target="_blank">Login</a></li>
-                                <li class="d-inline"><a href="javascript:void(0)" class="signup iq-button default iq-btn-round" target="_blank">Sign Up</a></li>
-                            </ul>
-                        </div>
-                    </nav>
-                </div>
+                            <span class="line"></span>
+                        </span>
+                        <span class="ion-navicon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                        <ul class="navbar-nav mr-auto w-100 justify-content-end">
+                            <li class="nav-item dropdown">
+                                <a class="nav-link {% if is_index %}active{% endif %}" href="{% url 'web:index' %}">
+                                    Home
+                                </a>
+                            </li>
+                            <li class="nav-item dropdown">
+                                <a class="nav-link   {% if is_about %}active{% endif %}" href="{% url 'web:about' %}">
+                                    About Us
+                                </a>
+                            </li>
+                            <li class="nav-item dropdown">
+                                <a class="nav-link  {% if is_service %}active{% endif %}"
+                                    href="{% url 'web:service' %}">
+                                    Service
+                                </a>
+                            </li>
+                            <li class="nav-item dropdown">
+                                <a class="nav-link  {% if is_updates %}active{% endif %}"
+                                    href="{% url 'web:updates' %}">
+                                    Updates
+                                </a>
+                            </li>
+                            <li class="nav-item dropdown">
+                                <a class="nav-link  {% if is_contact %}active{% endif %}"
+                                    href="{% url 'web:contact' %}">
+                                    Contact
+                                </a>
+                            </li>
+
+                        </ul>
+                    </div>
+
+                </nav>
             </div>
         </div>
-    </header>
-    <!-- Header End -->
+    </div>
+</header>
+<!-- Header End -->
