--- a/templates/web/service.html
+++ b/templates/web/service.html
@@ -1,74 +1,117 @@
 {% extends 'web/partials/base.html' %}
 {% load static %}
 {% block content %}
-  {% include 'web/partials/header2.html' %}
-  <!-- Breadcrumb Start -->
-  <div class="main-bg">
-    <div class="container-fluid p-0">
-      <div class="text-left iq-breadcrumb-one iq-bg-over black">
-        <div class="container">
-          <div class="row align-items-center">
-            <div class="col-sm-12">
-              <nav aria-label="breadcrumb" class="text-center iq-breadcrumb-two">
-                <h2 class="title">Three Column Blog</h2>
-                <ol class="breadcrumb main-bg">
-                  <li class="breadcrumb-item">
-                    <a href="javascript:void(0)"><i class="fa fa-home mr-2"></i>Home</a>
-                  </li> <li class="breadcrumb-item active">Three Column Blog</li>
-                </ol>
-              </nav>
-            </div>
+{% include 'web/partials/header2.html' %}
+<!-- Breadcrumb Start -->
+<div class="main-bg">
+  <div class="container-fluid p-0">
+    <div class="text-left iq-breadcrumb-one iq-bg-over black">
+      <div class="container">
+        <div class="row align-items-center">
+          <div class="col-sm-12">
+            <nav aria-label="breadcrumb" class="text-center iq-breadcrumb-two">
+              <h2 class="title">Service</h2>
+              <ol class="breadcrumb main-bg">
+                <li class="breadcrumb-item">
+                  <a href="{% url 'web:index' %}"><i class="fa fa-home mr-2"></i>Home</a>
+                </li>
+                <li class="breadcrumb-item active">Service</li>
+              </ol>
+            </nav>
           </div>
         </div>
       </div>
     </div>
   </div>
-  <!-- Breadcrumb End -->
-  <!-- Blog Start -->
-  <section class="iq-blog-section iq-pb-55">
-    <div class="container">
-      <div class="row">
-        <div class="iq-blog text-left">
-          <div class="row">
-           
-           
-           
-           
-            {% for service in services %}
-            <div class="col-lg-4 col-md-6 qloud-space-bottom">
-              <div class="iq-blog-box">
-                <div class="iq-blog-image clearfix">
-                  <img src="{{service.image.url}}" class="img-fluid" alt="blog" /> <ul class="iq-blogtag">
-                    <li>
-                      <a href="javascript:void(0)">Marketing</a>
+</div>
+<!-- Breadcrumb End -->
+<!-- Blog Start -->
+{% comment %}
+<section class="iq-blog-section iq-pb-55">
+  <div class="container">
+    <div class="row">
+      <div class="iq-blog text-left">
+        <div class="row">
+          {% for service in services %}
+          <div class="col-lg-4 col-md-6 qloud-space-bottom">
+            <div class="iq-blog-box">
+              <div class="iq-blog-image clearfix">
+                <img src="{{service.image.url}}" class="img-fluid" alt="blog" />
+                <ul class="iq-blogtag">
+                  <li>
+                    <a href="javascript:void(0)">Marketing</a>
+                  </li>
+                </ul>
+              </div>
+              <div class="iq-blog-detail">
+                <div class="iq-blog-meta">
+                  <ul class="iq-postdate">
+                    <li class="list-inline-item">
+                      <i class="fa fa-calendar-alt mr-2"></i>
+                      <span class="screen-reader-text">Posted on</span> <a href="javascript:void(0)"
+                        rel="bookmark"><time class="entry-date published updated"
+                          datetime="2020-02-17T06:40:07+00:00">February 17, 2020</time></a>
                     </li>
                   </ul>
                 </div>
-                <div class="iq-blog-detail">
-                  <div class="iq-blog-meta">
-                    <ul class="iq-postdate">
-                      <li class="list-inline-item">
-                        <i class="fa fa-calendar-alt mr-2"></i>
-                        <span class="screen-reader-text">Posted on</span> <a href="javascript:void(0)" rel="bookmark"><time class="entry-date published updated" datetime="2020-02-17T06:40:07+00:00">February 17, 2020</time></a>
-                      </li>
-                    </ul>
-                  </div>
 
-                  <div class="service-title">
-                    <a href="{{ service.get_absolute_url }}"><h5 class="mb-3">{{ service.title}}</h5></a>
-                  </div>
-                  <p class="">{{ service.description|truncatechars:80|safe }}</p>
-                  <div class="blog-button">
-                    <a class="iq-btn-link" href="{{ service.get_absolute_url }}">Read More<i class="ml-2 ion-ios-arrow-right"></i></a>
-                  </div>
+                <div class="service-title">
+                  <a href="{{ service.get_absolute_url }}">
+                    <h5 class="mb-3">{{ service.title}}</h5>
+                  </a>
+                </div>
+                <p class="">{{ service.description|truncatechars:80|safe }}</p>
+                <div class="blog-button">
+                  <a class="iq-btn-link" href="{{ service.get_absolute_url }}">Read More<i
+                      class="ml-2 ion-ios-arrow-right"></i></a>
                 </div>
               </div>
             </div>
-            {% endfor %}
           </div>
+          {% endfor %}
         </div>
       </div>
     </div>
-  </section>
-  
+  </div>
+</section>
+{% endcomment %}
+
+<section class="iq-blog-section iq-pb-55">
+  <div class="container">
+    <div class="row">
+      <div class="iq-blog text-left ">
+        <div class="row">
+          {% for service in services %}
+          <div class="col-lg-4 col-md-6 qloud-space-bottom ">
+            <div class="iq-blog-box">
+              <div class="iq-blog-image clearfix">
+                <img src="{{service.image.url}}" class="img-fluid" alt="blog" />
+                <ul class="iq-blogtag">
+                </ul>
+
+              </div>
+              <div class="iq-blog-detail">
+
+                <div class="blog-title service-title">
+                  <a href="{{ service.get_absolute_url }}">
+                    <h5 class="mb-3">{{ service.title }}</h5>
+                  </a>
+                </div>
+
+                <p class="">{{ service.description|truncatechars:120|safe }}</p>
+                <div class="blog-button">
+                  <a class="iq-btn-link" href="{{ service.get_absolute_url }}">Read More<i
+                      class="ml-2 ion-ios-arrow-right"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+          {% endfor %}
+
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
 {% endblock %}
