--- a/templates/web/updates.html
+++ b/templates/web/updates.html
@@ -1,29 +1,31 @@
-{% extends 'web/partials/base.html' %} 
-{% load static %} 
+{% extends 'web/partials/base.html' %}
+{% load static %}
 {% block content %}
 {% include "web/partials/header2.html" %}
-      <!-- Breadcrumb Start -->
-      <div class=" main-bg" >
-         <div class="container-fluid p-0">
-            <div class="text-left iq-breadcrumb-one
+<!-- Breadcrumb Start -->
+<div class=" main-bg">
+   <div class="container-fluid p-0">
+      <div class="text-left iq-breadcrumb-one
                iq-bg-over black     ">
-               <div class="container">
-                  <div class="row align-items-center">
-                     <div class="col-sm-12">
-                        <nav aria-label="breadcrumb" class="text-center iq-breadcrumb-two">
-                           <h2 class="title">
-                           Updates                     </h2>
-                           <ol class="breadcrumb main-bg">
-                              <li class="breadcrumb-item"><a href="{% url "web:index" %}"><i class="fa fa-home mr-2"></i>Home</a></li> <li class="breadcrumb-item active">Three Column Blog</li>
-                           </ol>
-                        </nav>
-                     </div>
-                  </div>
+         <div class="container">
+            <div class="row align-items-center">
+               <div class="col-sm-12">
+                  <nav aria-label="breadcrumb" class="text-center iq-breadcrumb-two">
+                     <h2 class="title">
+                        Updates </h2>
+                     <ol class="breadcrumb main-bg">
+                        <li class="breadcrumb-item"><a href="{% url "web:index" %}"><i
+                                 class="fa fa-home mr-2"></i>Home</a></li>
+                        <li class="breadcrumb-item active">Updates</li>
+                     </ol>
+                  </nav>
                </div>
             </div>
          </div>
       </div>
-      <!-- Breadcrumb End -->
-      <!-- Blog Start -->
+   </div>
+</div>
+<!-- Breadcrumb End -->
+<!-- Blog Start -->
 {% include "web/partials/updates.html" %}
-     {% endblock %}
+{% endblock %}
